[package]
name = "worker"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
http-body-util = "0.1"

# WASM Runtime
wasmtime = { version = "44.0", features = ["component-model", "async", "pooling-allocator"] }
wasmtime-wasi = "44.0"
wasmtime-wasi-http = "44.0"

# Utilities
dashmap = "6.0"      # Concurrent HashMap for storing InstancePre
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"       # Easy error handling
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"